[package]
name = "rust-task"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
solana-sdk = "1.15.2"
bs58 = "0.4"
solana-client = "1.15.2"
solana-program = "1.15.2"
borsh = "0.10.3"
# solana_idlgen = "0.1.0"
# idlgen = { git = "https://github.com/deanmlittle/idlgen.git" }
